Got standard boxes correct, now working on mobile

--- a/css/screen.css
+++ b/css/screen.css
@@ -503,7 +503,7 @@ small { font-size: 7px }
 }
 	  
 input[type="text"] {
-    width: 100px;
+    width: 300px;
 }
 
 
